static/sass/custom/_inline-ubuntu-logo.scss
@charset "UTF-8";

.ubuntu-logo {
  background-image: url('https://assets.ubuntu.com/v1/d212f35c-logo-ubuntu-120.png');
  background-image: url('https://assets.ubuntu.com/v1/9f61b97f-logo-ubuntu.svg'), none;
  background-position: left bottom;
  background-repeat: no-repeat;
  background-size: auto 0.85em;
  display: inline-block;
  height: 1em;
  margin-left: 0.1em;
  margin-top: -.25rem;
  text-indent: -99999px;
  width: 150px;
  position: relative;
  top: -.15rem;
}

